--- a/playlist.html
+++ b/playlist.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>for my shuttu😌❤️</title>
+  <title>just us</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1 class="main-title">🎶 Our Love Playlist 🎶</h1>
+  <h1 class="main-title">for my shuttu 😌❤️</h1>
 
   <div class="spotify-box">
     <iframe style="border-radius:12px"
